--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,14 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
+    // Apply the java plugin to add support for Java
+    id 'java'
+
+    // Apply the application plugin to add support for building a CLI application.
     id 'application'
+
+    //https://imperceptiblethoughts.com/shadow/getting-started/
+    //id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 repositories {
@@ -17,11 +23,21 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+     // This dependency is used by the application.
+    implementation 'com.google.guava:guava:28.2-jre'
 
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    // Use JUnit Jupiter API for testing.
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+
+    // Use JUnit Jupiter Engine for testing.
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+
+    implementation "com.sparkjava:spark-core:2.9.3"
+    implementation "com.sparkjava:spark-template-mustache:2.7.1"
+
+    implementation "org.apache.logging.log4j:log4j-api:2.13.3"
+    implementation "org.apache.logging.log4j:log4j-core:2.13.3"
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.13.3"
 }
 
 application {
