--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,14 +13,17 @@ plugins {
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
 
-   // https://imperceptiblethoughts.com/shadow/getting-started/
-    //id 'com.github.johnrengelman.shadow' version '6.1.0'
+    https://imperceptiblethoughts.com/shadow/getting-started/
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
+
+task stage(dependsOn: ['shadowJar'])
+shadowJar.mustRunAfter clean
 
 dependencies {
      // This dependency is used by the application.
